--- a/css/style.css
+++ b/css/style.css
@@ -32,22 +32,81 @@ body {
 	width: 100vw;
 	height: 100vh;
 
-	/* center vertically */
+
+	/* center vertically 
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
-	align-content: center;
+	align-content: center;*/
 
 	/* background behind the plot */
 	/*background: rgb(40, 40, 40);*/
-	background: white;
+	background: rgb(228, 228, 232);
 
 	/* default text */
 	font-family: sans-serif;
 	font-size: 1.1rem;
 }
 
+.title-row {
+	width: 100%;
+
+	/* Space above and below the title */
+	padding-top: 3rem;
+	padding-bottom: 3rem;
+
+	background-color: var(--theme-color-dark);
+	background: linear-gradient(45deg, rgb(250, 210, 0), var(--theme-color-dark));
+	/* Center the title using flexbox */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.width-limited {
+	max-width: 60rem;
+
+	/* Center horizontally: */
+	margin-left: auto;
+	margin-right: auto;
+}
+
+p {
+	text-align: justify;
+}
+
+.box {
+	padding-left: 2rem;
+	padding-right: 2rem;
+	margin-bottom: 1rem;
+	margin-left: auto;
+	margin-right: auto;
+
+	max-width: 70rem;
+	background-color: rgba(0, 122, 50, 0.1);
+
+	border: 2px solid var(--theme-color-dark);
+	border-radius: 2rem;
+}
+
 svg {
 	width: 100%;
 	height: auto;
+	justify-content: center;
+	
+}
+
+h4 {
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.usa_map {
+	width : 60%;
+	margin-left: auto;
+	margin-right: auto;
+	/*background-color: rgb(216, 215, 219)*/
 }
