--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,9 @@ body {
 }
 
 .title-row h1 {
-	font-size: 2.5rem;
+	font-size: 3.5rem;
 	color: rgb(255, 255, 255);
-	font-variant: small-caps;
+	font-variant: stylistic;
 
 	text-shadow: black 0 0 2rem;
 }
@@ -108,6 +108,7 @@ svg {
 	height: auto;
 	justify-content: center;
 	
+	
 }
 
 h4 {
@@ -119,6 +120,13 @@ h4 {
 }
 
 .usa_map {
+	width : 80%;
+	margin-left: auto;
+	margin-right: auto;
+	/*background-color: rgb(216, 215, 219)*/
+}
+
+.hit_rate {
 	width : 80%;
 	margin-left: auto;
 	margin-right: auto;
