--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,10 @@ svg {
 	justify-content: center;
 }
 
+svg .tick > text {
+	font-size: 1rem;	
+}
+
 h4 {
 	margin-left: auto;
 	margin-right: auto;
