--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,35 @@ h3 {
 	align-items: center;
 }
 
+info {
+	color: rgb(238, 14, 18);
+	font-size: x-large;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+small-info {
+	color: rgb(238, 14, 18);
+	font-size: large;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+h5 {
+	color: rgb(24, 23, 23);
+	font-size: xx-large;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 h4{
 	color: rgb(14, 36, 238);
 	font-size: xx-large;
