--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ info {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding-top: 1rem;
 }
 small-info {
 	color: rgb(238, 14, 18);
