--- a/css/style.css
+++ b/css/style.css
@@ -113,10 +113,10 @@ nav li {
 p {
 	color: rgb(8, 8, 8);
 	text-align: justify;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	font-family:  Georgia, 'Times New Roman', Times, serif;
+
 }
+
 
 .box {
 	padding-left: 2rem;
@@ -136,7 +136,7 @@ p {
 
 div2 {
 	float:left;
-	width: 30%;
+	width: 35%;
 	padding: 0 10px;
   }
   
@@ -147,10 +147,15 @@ div2 {
 	margin-top: 8rem;
 	margin-left: 10rem;
 	margin-bottom: 2rem;
-	max-width: 40rem;
+	max-width: 50rem;
 	background-color: rgba(114, 165, 227, 0.1);
 
 	border-radius: 2rem;
+}
+
+iframe {
+	margin-top: 4rem;
+	margin-left: 7rem;
 }
 
 .box_left{
@@ -159,9 +164,8 @@ div2 {
 	margin-top: 1rem;
 	margin-left: 15rem;
 	margin-bottom: 2rem;
-	max-width: 40rem;
+	max-width: 50rem;
 	background-color: rgba(114, 165, 227, 0.1);
-
 	border-radius: 2rem;
 
 }
@@ -186,6 +190,7 @@ title_plot{
 	font-size: xx-large;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 3rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -202,6 +207,7 @@ h3 {
 	align-items: center;
 }
 
+
 info {
 	color: rgb(238, 14, 18);
 	font-size: x-large;
@@ -212,15 +218,7 @@ info {
 	align-items: center;
 	padding-top: 1rem;
 }
-small-info {
-	color: rgb(238, 14, 18);
-	font-size: large;
-	margin-left: auto;
-	margin-right: auto;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
+
 
 h5 {
 	color: rgb(24, 23, 23);
