--- a/css/style.css
+++ b/css/style.css
@@ -136,35 +136,38 @@ p {
 
 div2 {
 	float:left;
-	width: 35%;
+	width: 30%;
 	padding: 0 10px;
   }
   
 
 .box_right{
-	padding-left: 2rem;
-	padding-right: 2rem;
-	margin-top: 1rem;
-	margin-left: 10rem;
+	padding-left: 1%;
+	padding-right: 1%;
+	margin-top: 2%;
+	margin-left: 12%;
 	margin-bottom: 2rem;
-	max-width: 50rem;
+	max-width: 50%;
 	background-color: rgba(114, 165, 227, 0.1);
 
 	border-radius: 2rem;
 }
 
 iframe {
-	margin-top: 4rem;
-	margin-left: 7rem;
+	padding-right: 10%;
+	padding-left: 10%;
+	padding-top: 10%;
+	padding-bottom: 0%;
+
 }
 
 .box_left{
-	padding-left: 2rem;
-	padding-right: 2rem;
-	margin-top: 1rem;
+	padding-left: 1%;
+	padding-right: 1%;
+	margin-top: 2%;
 	margin-left: 12rem;
 	margin-bottom: 2rem;
-	max-width: 50rem;
+	max-width: 50%;
 	background-color: rgba(114, 165, 227, 0.1);
 	border-radius: 2rem;
 
