--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ p {
 
 div2 {
 	float:left;
-	width: 30%;
+	width: 35%;
 	padding: 0 10px;
   }
   
@@ -145,9 +145,9 @@ div2 {
 	padding-left: 1%;
 	padding-right: 1%;
 	margin-top: 2%;
-	margin-left: 12%;
-	margin-bottom: 2rem;
-	max-width: 50%;
+	margin-left: 7%;
+	margin-bottom: 1%;
+	max-width: 60%;
 	background-color: rgba(114, 165, 227, 0.1);
 
 	border-radius: 2rem;
@@ -165,9 +165,9 @@ iframe {
 	padding-left: 1%;
 	padding-right: 1%;
 	margin-top: 2%;
-	margin-left: 12rem;
+	margin-left: 12%;
 	margin-bottom: 2rem;
-	max-width: 50%;
+	max-width: 60%;
 	background-color: rgba(114, 165, 227, 0.1);
 	border-radius: 2rem;
 
